samples/fortio/fortio-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
spec:
  hosts:
  - fortio
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: fortio
        subset: v2
  - route:
    - destination:
        host: fortio
        subset: v1
