samples/fortio/fortio-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: fortio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
      version: v1
  template:
    metadata:
      labels:
        app: fortio
        version: v1
    spec:
      containers:
      - name: fortio-server
        image: fortio/fortio
        imagePullPolicy: IfNotPresent
        command: ["fortio"]
        args: [
          "server", "-http-port", "0.0.0.0:8080",
          "-echo-server-default-params", "header=server:1"
        ]
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
      version: v2
  template:
    metadata:
      labels:
        app: fortio
        version: v2
    spec:
      containers:
      - name: fortio-server
        image: fortio/fortio
        imagePullPolicy: IfNotPresent
        command: ["fortio"]
        args: [
          "server", "-http-port", "0.0.0.0:8080",
          "-echo-server-default-params", "header=server:2"
        ]
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
spec:
  hosts:
  - fortio
  http:
  - route:
    - destination:
        host: fortio
        subset: v1
      weight: 90
    - destination:
        host: fortio
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fortio
spec:
  host: fortio
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
