samples/fortio/fortio-v1-10-v2-90.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
spec:
  hosts:
  - fortio
  http:
  - route:
    - destination:
        host: fortio
        subset: v1
      weight: 10
    - destination:
        host: fortio
        subset: v2
      weight: 90
